--- a/NEWCSS.css
+++ b/NEWCSS.css
@@ -1,117 +1,26 @@
-        body, h1, h2, p, ul, li {
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            line-height: 1.6;
-        }
-        header {
-            background-color: #412e2e;
-            color: aliceblue;
-            padding: 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        .logo {
-            /* Centering the SVG logo */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-width: 150px; /* Ensure space for the logo */
-        }
-        .Header-content {
-            text-align: left;
-        }
-        nav {
-            background-color: #ccb0b0;
-        }
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            padding: 1rem 1rem;
-        }
-        .menu li {
-            margin: 0 1rem;
-            position: relative;
-        }
-        .menu a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.35s ease;
-        }
-        .menu a:hover {
-            color: rgb(48, 65, 114);
-        }
-        .SUBMENU-content {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            background-color: gray;
-            list-style: none; /* Added to remove bullets */
-            padding: 0.5rem 0; /* Added padding */
-            width: 200px; /* Added width */
-            z-index: 1;
-        }
-        .SUBMENU-content li a {
-             padding: 0.5rem 1rem; /* Added padding */
-             display: block; /* Make the whole area clickable */
-        }
-        .submenu:hover .SUBMENU-content {
-            display: block;
-        }
-        main {
-            padding: 2rem;
-        }
-        .about {
-            font-family: 'Times New Roman', Times, serif;
-            color: seashell;
-            background-color: #333;
-            padding: 20px;
-            border-radius: 10px;
-        }
-        .about h2 {
-            font-size: 2rem;
-            color: white;
-            margin-bottom: 1rem; /* Added margin */
-        }
-        .about p {
-            font-size: 1rem;
-            line-height: 1.8;
-            color: #f4f4f4;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background-color: #444;
-            color: #fff;
-        }
-        .social-links a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        @media screen and (max-width: 768px) {
-            header {
-                flex-direction: column;
-                text-align: center;
-            }
-            .logo {
-                margin-bottom: 1rem;
-            }
-            .menu {
-                flex-direction: column;
-                align-items: center;
-            }
-            .menu li {
-                margin: 0.5rem 0;
-            }
-            .SUBMENU-content {
-                position: static;
-                width: 100%;
-                text-align: center;
-            }
-        }
+styless.css
+body,h1,h2,p,ul,li 
+{
+    margin: 1;
+    padding: 1;
+}
+
+header{
+    background-color: rgb(151, 153, 156);
+    color: rgb(26, 22, 22);
+    padding: 1rem;
+    display: flex;
+    align-items: first center;
+    justify-content: space-between;
+}
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+}
+
+footer {
+    text-align: center;
+    padding: 1rem 0;
+    background-color: rgba(123, 126, 129, 0.795);
+}
